--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <title>Asker</title>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 </head>
-<body ng-app="askerApp">
+<body ng-app="askerApp" ng-controller="mainCtrl">
 
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        Hello, world {{test}}
-        <slider></slider>
+        Angular asker sample {{test}}
+        <question-radio></question-radio>
       </div>
     </div>
   </div>
