--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Asker</title>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="css/app.css">
 </head>
 <body ng-app="askerApp" ng-controller="mainCtrl">
 
@@ -11,7 +12,13 @@
     <div class="row">
       <div class="col-md-12">
         Angular asker sample {{test}}
-        <question-radio></question-radio>
+        <question q="questions[currentIndex]"></question>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        {{currentIndex}}
+        <button class="btn btn-sm btn-primary" ng-click="currentIndex=currentIndex+1">Ответить</button>
       </div>
     </div>
   </div>
@@ -23,10 +30,11 @@
   <!-- angular -->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-animate/angular-animate.js"></script>
+  <script src="bower_components/angular-resource/angular-resource.js"></script>
 
   <!-- angular mine -->
   <script src="js/app.js"></script>
-  <script src="js/controllers/slider.js"></script>
+  <script src="js/services/rest.js"></script>
   <!-- <script src="js/directives/slider.js"></script> -->
 </body>
 </html>
