before firebase init

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <div class="row">
       <div class="col-md-12">
         Angular asker sample {{test}}
-        <question q="questions[currentIndex]"></question>
+        <question q="questions[currentIndex]" current="currentIndex"></question>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
         {{currentIndex}}
-        <button class="btn btn-sm btn-primary" ng-click="currentIndex=currentIndex+1">Ответить</button>
+
       </div>
     </div>
   </div>
