--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Asker</title>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="css/app.css">
+  <script src='https://cdn.firebase.com/js/client/1.0.17/firebase.js'></script>
 </head>
 <body ng-app="askerApp" ng-controller="mainCtrl">
 
