--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <title>Asker</title>
@@ -27,6 +27,10 @@
 
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+  <!-- vk -->
+  <script src="//vk.com/js/api/xd_connection.js?2"></script>
+  <script src="js/vkapi.js"></script>
 
   <!-- angular -->
   <script src="bower_components/angular/angular.js"></script>
