work with users.get method

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        Angular asker sample {{test}}
+        Хай, {{vkUser.firstName}} {{vkUser.lastName}}. Не хочешь собрать свою тиму на TI 4?
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
         <question q="questions[currentIndex]" current="currentIndex"></question>
       </div>
     </div>
