--- a/index.html
+++ b/index.html
@@ -10,36 +10,41 @@
 <body ng-app="askerApp" ng-controller="mainCtrl">
 
   <div class="container">
+    <!-- <div class="row">
+      <div class="col-md-12">
+        Загружаются плюшки...
+      </div>
+    </div> -->
     <div class="row">
       <div class="col-md-12">
-        Хай, {{vkUser.firstName}} {{vkUser.lastName}}. Не хочешь собрать свою тиму на TI 4?
+        <a class="btn btn-success" ui-sref="home">Домой</a>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
-        <question q="questions[currentIndex]" current="currentIndex"></question>
+        <a class="btn btn-success" ui-sref="questions">Поехали</a>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-12">
-        {{currentIndex}}
 
-      </div>
-    </div>
+    <div ui-view></div>
+
   </div>
 
 
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
-  <!-- vk -->
-  <script src="//vk.com/js/api/xd_connection.js?2"></script>
-  <script src="js/vkapi.js"></script>
-
   <!-- angular -->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
+  <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+
+  <!-- vk -->
+  <script src="//vk.com/js/api/xd_connection.js?2"></script>
+  <script src="js/vkapi.js"></script>
+
+
 
   <!-- angular mine -->
   <script src="js/app.js"></script>
