--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <!-- angular mine -->
   <script src="js/app.js"></script>
   <script src="js/services/rest.js"></script>
+  <script src="js/controllers/steps/step-100-choose-friends.js"></script>
   <!-- <script src="js/directives/slider.js"></script> -->
 </body>
 </html>
