broken directive askerNext

--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
   <!-- angular mine -->
   <script src="js/app.js"></script>
   <script src="js/services/rest.js"></script>
+
+  <!-- directives -->
+  <script src="js/directives/asker-next.js"></script>
+
+  <!-- steps controllers -->
   <script src="js/controllers/steps/step-100-choose-friends.js"></script>
-  <!-- <script src="js/directives/slider.js"></script> -->
+  <script src="js/controllers/steps/step-300-choose-commentator.js"></script>
+
 </body>
 </html>
