work with asker holded

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 
   <!-- steps controllers -->
   <script src="js/controllers/steps/step-100-choose-friends.js"></script>
+  <script src="js/controllers/steps/step-200-choose-music.js"></script>
   <script src="js/controllers/steps/step-300-choose-commentator.js"></script>
+  <script src="js/controllers/steps/step-400-questions.js"></script>
 
 </body>
 </html>
